# Falcata

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  DEPLOY_SECRETS.md  Dockerfile  Dockerfile.windows  README.md  config.json  config.prod.json  config.release.json  docker-compose.windows.yml  docker-compose.yml  main.xml
.github/workflows/: ci.yml  cmake-single-platform.yml  release.yml
HttpNetworkTransport/: CMakeLists.txt  README.md
HttpNetworkTransport/include/HttpNetworkTransport/: HttpClientNetworkTransport.hpp  HttpServerNetworkTransport.hpp
HttpNetworkTransport/src/: HttpServerNetworkTransport.cpp
HttpNetworkTransport/test/: CMakeLists.txt
HttpNetworkTransport/test/src/: HttpClientNetworkTransportTests.cpp  HttpServerNetworkTransportTests.cpp
TestStaticContent/: index.html
WireShark/: connect-connack-failed-packet.pcapng
cmake/: ClangFormat.cmake
docker/: docker-compose.windows.yml  entrypoint.ps1  entrypoint.sh
